# sentence-memorability

./: .gitignore  README.md  code.md  main.py  pyproject.toml  remove_citations.sh  stats.md
background/: background.docx  sentence_memorability.txt
data/processed/: cr_by_svo.csv  cr_scores.csv  cr_summary_8.csv  descriptive_stats.csv  fa_rate.csv  participant_validity.csv  stats_summary.csv  validation_report.csv
data/processed/stats/: 00_kruskal_wallis_summary.csv  01_corrected_ir_by_condition.csv  04_cliffs_delta_pairwise.csv  05_wr_accuracy_by_condition.csv  06_ir_by_voice.csv  07_wr_by_voice.csv  08_ir_condition_voice.csv  08_wr_condition_voice.csv  10_ir_rt_by_condition.csv  10_wr_rt_by_condition.csv  11_ir_by_block.csv  14_sdt_by_condition.csv  15_lag_analysis.csv  16_bootstrap_cis.csv
outputs/stats/: descriptive_stats.txt  normality.txt  plots_manifest.txt  statistical_tests.txt  validation_summary.txt
reports/presentation/: descriptives.txt  fa_rates.txt  normality.txt  slides.tex
reports/report1/: conclusion.md  main.tex  methods.md  pipeline.md  references.bib  report.ipynb  report.tex  results.md
src/: main.R
src/analysis/stats/: 05_statistical_tests.R  05a_compute_scores.R  05b_statistical_tests.R  (+1 more)
src/methods/: methods.md  results.md  results_stats.R
src/preliminary/: data.R  events.R  final_cleaning.R  flagging.R
src/preprocessing/: 01_load_and_combine.R  02_clean_events.R  03_validate_participants.R  04_finalize_dataset.R
src/report/: methods.md  results.md
src/statistical_analysis/: stats.R
src/visualization/: viz.R
(+3 files in other folders)
